# kindle-clipping-parser

./: .gitignore  My Clippings.txt  README.md  kindle-parser.py  pyproject.toml  test.py
backend/: manage.py
backend/clippingsParser/: forms.py  models.py  urls.py  views.py
backend/clippingsParser/migrations/: 0003_auto_20200908_2311.py  0005_auto_20200925_1932.py  0006_clip_date_read.py
backend/clippingsParser/templates/: base.html
backend/clippingsParser/templates/clippingsParser/: book.html  index.html  library.html
backend/myClippingsLibrary/: settings.py  urls.py  wsgi.py
myClippingsLibrary/clippingsParser/: admin.py  apps.py  models.py  urls.py  views.py
myClippingsLibrary/clippingsParser/migrations/: 0001_initial.py  0002_auto_20200908_2303.py  0004_auto_20200909_1110.py
myClippingsLibrary/clippingsParser/templates/clippingsParser/: book.html  index.html  library.html
myClippingsLibrary/myClippingsLibrary/: asgi.py  settings.py  urls.py
