[tool.poetry]
name = "kindle-clippings-parser"
version = "0.1.0"
description = "parser for the myClipping.txt kindle highlights file."
authors = ["MattiooFR <dugue.mathieu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
